--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <meta name="description" content="Generic description"  />
     <meta http-equiv="Permissions-Policy" content="interest-cohort=()" />
     <title>NutriDiary</title>
-    
+    <link rel="stylesheet" href="assets/css/reset.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    
+    <script src="assets/js/script.js"></script>
 </body>
 </html>
