Updated gitignore, added CDN script tag for Tailwindcss.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>NutriDiary</title>
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/style.css">
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
     <script src="assets/js/script.js"></script>
