--- a/index.html
+++ b/index.html
@@ -11,6 +11,21 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
+    <h1 class="title"></h1>
+        <ul>
+            <p class="item-1"></p>
+            <p class="item-2"></p>
+            <p class="item-3"></p>
+        </ul>
+        <ul>
+            <p class="item-4"></p>
+            <p class="item-5"></p>
+            <p class="item-6"></p>
+        </ul>
+        <form>
+            <input class="text-input"></input>
+            <button class="submit-btn"></button>
+        </form>
     <script src="assets/js/script.js"></script>
 </body>
 </html>
