--- a/index.html
+++ b/index.html
@@ -1,31 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Generic description"  />
+    <meta name="description" content="Generic description" />
     <meta http-equiv="Permissions-Policy" content="interest-cohort=()" />
     <title>NutriDiary</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Merienda&family=Merriweather+Sans&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/style.css">
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
+
 <body>
     <h1 class="title"></h1>
-        <ul>
-            <p class="item-1"></p>
-            <p class="item-2"></p>
-            <p class="item-3"></p>
-        </ul>
-        <ul>
-            <p class="item-4"></p>
-            <p class="item-5"></p>
-            <p class="item-6"></p>
-        </ul>
-        <form>
-            <input class="text-input"></input>
-            <button class="submit-btn"></button>
-        </form>
+    <ul>
+        <p class="item-1"></p>
+        <p class="item-2"></p>
+        <p class="item-3"></p>
+    </ul>
+    <ul>
+        <p class="item-4"></p>
+        <p class="item-5"></p>
+        <p class="item-6"></p>
+    </ul>
+    <form>
+        <input class="text-input"></input>
+        <button class="submit-btn"></button>
+    </form>
     <script src="assets/js/script.js"></script>
 </body>
+
 </html>
