Began making 2nd query page.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
   <link rel="stylesheet" href="assets/css/style.css">
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-
 <body>
   <header>
     <nav class="bg-lime-200 py-6 px-6">
@@ -76,7 +75,6 @@
                     d="M2.625 6.75a1.125 1.125 0 112.25 0 1.125 1.125 0 01-2.25 0zm4.875 0A.75.75 0 018.25 6h12a.75.75 0 010 1.5h-12a.75.75 0 01-.75-.75zM2.625 12a1.125 1.125 0 112.25 0 1.125 1.125 0 01-2.25 0zM7.5 12a.75.75 0 01.75-.75h12a.75.75 0 010 1.5h-12A.75.75 0 017.5 12zm-4.875 5.25a1.125 1.125 0 112.25 0 1.125 1.125 0 01-2.25 0zm4.875 0a.75.75 0 01.75-.75h12a.75.75 0 010 1.5h-12a.75.75 0 01-.75-.75z"
                     clip-rule="evenodd" />
             </svg>
-            <span> My Meals </span>
           </a>
         </div>
       </div>
@@ -84,15 +82,11 @@
   </header>
   <main id="main-container">
 
-
-
-
-
   </main>
   <footer>
 
   </footer>
-  <script src="assets/js/script.js"></script>
+  <script src="./assets/js/script.js"></script>
 </body>
 
 </html>
