linked and applied favicon

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="description" content="Generic description" />
   <meta http-equiv="Permissions-Policy" content="interest-cohort=()" />
   <title>NutriDiary</title>
+  <link rel="icon" type="image/png" href="assets/Images/Project Logo.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Merienda&family=Merriweather+Sans&display=swap"
