--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <nav class="bg-lime-200 py-6 px-6">
       <div class="max-w-4xl mx-auto flex justify-between">
         <div>
-          <a href="#" class="flex items-center space-x-2">
+          <a href="#" class="flex items-center space-x-2" id="home-link">
           <svg
                xmlns="http://www.w3.org/2000/svg"
                viewBox="0 0 24 24"
