--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
+<body class="body-container">
   <header>
     <nav class="bg-lime-200 py-6 px-6">
       <div class="max-w-4xl mx-auto flex justify-between">
         <div>
-          <a href="#" class="flex items-center space-x-2" id="home-link">
+          <a href="./index.html" class="flex items-center space-x-2" id="home-link">
           <svg
                xmlns="http://www.w3.org/2000/svg"
                viewBox="0 0 24 24"
