--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <nav class="bg-lime-200 py-6 px-6">
       <div class="max-w-4xl mx-auto flex justify-between">
         <div>
-          <a href="#" class="flex items-center space-x-2" id="home-link">
+          <a href="index.html" class="flex items-center space-x-2">
           <svg
                xmlns="http://www.w3.org/2000/svg"
                viewBox="0 0 24 24"
@@ -83,7 +83,17 @@
     </nav>
   </header>
   <main id="main-container">
-
+    <div>
+      <div class="max-w-4xl mx-auto flex justify-between">
+        <div class="flex flex-col justify-center items-center">
+          <h1 class="text-4xl font-bold text-center">NutriDiary</h1>
+          <p class="text-center">A simple meal plan generator</p>
+        </div>
+        <div class="flex flex-col justify-center items-center">
+          <img src="assets/Images/logo.png" alt="Project Logo" class="w-40 h-40">
+        </div>
+      </div>
+    </div>
   </main>
   <footer>
 
