--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 =======
     </main>
     <footer></footer>
-    <script src="./assets/js/script.js"></script>
+    <script type="module" src="./assets/js/script.js"></script>
   </body>
 </html>
 
