--- a/index.html
+++ b/index.html
@@ -110,12 +110,13 @@
               A simple meal plan generator. Click the Apple to get started!
             </p>
           </div>
-          <div class="flex flex-col justify-center items-center">
+          <div class="animate_animated animate_bounce flex flex-col justify-center items-center">
             <a href="#" class="flex items-center space-x-2">
               <img
                 src="assets/Images/logo.png"
                 alt="Project Logo"
-                class="w-50 h-50 hover:bg-lime-300"
+                class="w-50 h-50"
+                id ="Logo"
               />
             </a>
           </div>
