--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         </div>
         <div class="flex flex-col justify-center items-center">
           <a href="#" class="flex items-center space-x-2">
-            <img id="home-link" src="assets/Images/logo.png" alt="Project Logo" class="w-50 h-50 hover:bg-lime-300" />
+            <img id="home-link" src="assets/Images/logo.png" alt="Project Logo" class="w-50 h-50" />
           </a>
         </div>
       </div>
@@ -79,6 +79,7 @@
   </main>
   <footer></footer>
   <script type="module" src="./assets/js/script.js"></script>
+  <!-- <script src="/path/to/assets/js/"></script> -->
 </body>
 
 </html>
