--- a/index.html
+++ b/index.html
@@ -21,9 +21,14 @@
 
 <body class="body-container" style="background-image: url('./assets/Images/arnold.jpg')">
   <header>
-    <nav class="bg-lime-300 py-6 px-6">
-      <div class="max-w-4xl mx-auto flex justify-between">
-        <div>
+    <nav class="bg-lime-300 p-2">
+      <div class="max-w-4xl mx-auto flex justify-evenly">
+        <div class="flex w-12 h-12">
+          <a href="#" class="flex items-center space-x-2" id="reload-page">
+            <img src="./assets/Images/logo.png" alt="Project Logo"  />
+          </a>
+        </div>
+        <div class="flex">
           <a href="#" class="flex items-center space-x-2" id="meal-plan-generator">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="w-6 h-6">
               <path
@@ -31,26 +36,30 @@
               <path
                     d="M5.25 5.25a3 3 0 00-3 3v10.5a3 3 0 003 3h10.5a3 3 0 003-3V13.5a.75.75 0 00-1.5 0v5.25a1.5 1.5 0 01-1.5 1.5H5.25a1.5 1.5 0 01-1.5-1.5V8.25a1.5 1.5 0 011.5-1.5h5.25a.75.75 0 000-1.5H5.25z" />
             </svg>
-            <span> Meal Plan Generator </span>
+            <span>Plan Generator</span>
           </a>
         </div>
-        <div>
-          <a href="#" class="flex items-center space-x-2">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="w-6 h-6">
-              <path d="M2.625 6.75a1.125 1.125 0 112.25 0 1.125 1.125 0 01-2.25 0zm4.875 0A.75.75 0 018.25 6h12a.75.75 0 010 1.5h-12a.75.75 0 01-.75-.75zM2.625 12a1.125 1.125 0 112.25 0 1.125 1.125 0 01-2.25 0zM7.5 12a.75.75 0 01.75-.75h12a.75.75 0 010 1.5h-12A.75.75 0 017.5 12zm-4.875 5.25a1.125 1.125 0 112.25 0 1.125 1.125 0 01-2.25 0zm4.875 0a.75.75 0 01.75-.75h12a.75.75 0 010 1.5h-12a.75.75 0 01-.75-.75z"
-                    clip-rule="evenodd" />
-            </svg>
-            <span> Meal Plan </span>
-          </a>
+        <div class="dropdown-container flex">
+          <button class="dropdown-trigger">
+            <svg class="w-6 h-6 p-1 text-gray-800 dark:text-black" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 16 10">
+              <path d="M15.434 1.235A2 2 0 0 0 13.586 0H2.414A2 2 0 0 0 1 3.414L6.586 9a2 2 0 0 0 2.828 0L15 3.414a2 2 0 0 0 .434-2.179Z"></path>
+          </svg>
+            <span>Meal Plans</span>
+          </button>
+          <ul class="dropdown-options">
+            <li><a href="#">Option 1</a></li>
+            <li><a href="#">Option 2</a></li>
+            <li><a href="#">Option 3</a></li>
+          </ul>
         </div>
-        <div>
+        <div class="flex">
           <a href="" class="flex items-center space-x-2" id="workout-plan-generator">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="w-6 h-6">
               <path fill-rule="evenodd"
                     d="M2.25 2.25a.75.75 0 000 1.5h1.386c.17 0 .318.114.362.278l2.558 9.592a3.752 3.752 0 00-2.806 3.63c0 .414.336.75.75.75h15.75a.75.75 0 000-1.5H5.378A2.25 2.25 0 017.5 15h11.218a.75.75 0 00.674-.421 60.358 60.358 0 002.96-7.228.75.75 0 00-.525-.965A60.864 60.864 0 005.68 4.509l-.232-.867A1.875 1.875 0 003.636 2.25H2.25zM3.75 20.25a1.5 1.5 0 113 0 1.5 1.5 0 01-3 0zM16.5 20.25a1.5 1.5 0 113 0 1.5 1.5 0 01-3 0z"
                     clip-rule="evenodd" />
             </svg>
-            <span> Workout </span>
+            <span>Workout</span>
           </a>
         </div>
       </div>
