--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <div class="max-w-4xl mx-auto flex justify-evenly">
         <div class="flex w-12 h-12">
           <a href="#" class="flex items-center space-x-2" id="reload-page">
-            <img src="./assets/Images/logo.png" alt="Project Logo"  />
+            <img src="./assets/Images/logo.png" alt="Project Logo" />
           </a>
         </div>
         <div class="flex">
@@ -41,9 +41,12 @@
         </div>
         <div class="dropdown-container flex">
           <button class="dropdown-trigger">
-            <svg class="w-6 h-6 p-1 text-gray-800 dark:text-black" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 16 10">
-              <path d="M15.434 1.235A2 2 0 0 0 13.586 0H2.414A2 2 0 0 0 1 3.414L6.586 9a2 2 0 0 0 2.828 0L15 3.414a2 2 0 0 0 .434-2.179Z"></path>
-          </svg>
+            <svg class="w-6 h-6 p-1 text-gray-800 dark:text-black" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
+                 fill="currentColor" viewBox="0 0 16 10">
+              <path
+                    d="M15.434 1.235A2 2 0 0 0 13.586 0H2.414A2 2 0 0 0 1 3.414L6.586 9a2 2 0 0 0 2.828 0L15 3.414a2 2 0 0 0 .434-2.179Z">
+              </path>
+            </svg>
             <span>Meal Plans</span>
           </button>
           <ul class="dropdown-options">
