--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
   <header>
     <nav class="bg-lime-300 p-2">
       <div class="flex justify-evenly">
-        <div class="flex w-12">
+        <div class="flex w-24">
           <a href="#" class="flex items-center space-x-2" id="reload-page">
-            <img src="./assets/Images/title_logo.png" alt="Apple with a flexing arm." class="title-logo" />
+            <img src="./assets/Images/title_logo.png" alt="Apple with a flexing arm." class="title-logo scale-150" />
           </a>
         </div>
         <div class="flex">
-          <a href="#" class="flex items-center space-x-2" id="meal-plan-generator">
+          <a href="#" class="flex items-center space-x-2 text-center" id="meal-plan-generator">
             <span>Plan Generator</span>
           </a>
         </div>
@@ -67,9 +67,9 @@
   </header>
   <main id="main-container" class="pb-5">
     <div class="pt-5">
-      <div class="max-w-4xl mx-auto flex flex-col items-center justify-center sm:flex-row sm:justify-between">
+      <div class="max-w-4xl mx-auto flex flex-col justify-center sm:flex-row sm:justify-between">
         <div class="flex flex-col justify-center items-center sm:items-start">
-          <h1 class="text-4xl font-extrabold text-center text-white pb-4">NutriDiary</h1>
+          <h1 class="text-4xl font-extrabold text-center text-white pb-4 pl-4">NutriDiary</h1>
           <p class="text-center text-white font-bold pb-10">
             A simple meal plan generator. Click the Apple to get started!
           </p>
