feature/data-validation

--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
             </svg>
             <span>Meal Plans</span>
           </button>
+
+          <!-- may need add event listener to each ul and use event delegation -->
           <ul class="dropdown-options" id="meal-options">
           </ul>
         </div>
