updated tw media queries on nav elements for smaller screen sizes

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
         <div class="flex">
           <a href="#" class="flex items-center space-x-2 text-center" id="meal-plan-generator">
-            <span>Plan Generator</span>
+            <span class="sm: text-xs">Plan Generator</span>
           </a>
         </div>
         <div class="dropdown-container flex justify-center" id="meal-container">
@@ -42,11 +42,11 @@
                 d="M15.434 1.235A2 2 0 0 0 13.586 0H2.414A2 2 0 0 0 1 3.414L6.586 9a2 2 0 0 0 2.828 0L15 3.414a2 2 0 0 0 .434-2.179Z">
               </path>
             </svg>
-            <span>Meal Plans</span>
+            <span class="sm: text-xs">Meal Plans</span>
           </button>
 
           <!-- may need add event listener to each ul and use event delegation -->
-          <ul class="dropdown-options bg-lime-100 w-[10rem] border-2 border-black" id="meal-options">
+          <ul class="dropdown-options bg-lime-100 w-[10rem] border-2 border-black sm: text-xs sm: w-[6rem]" id="meal-options">
           </ul>
         </div>
         <div class="dropdown-container flex justify-center" id="workout-container">
@@ -57,9 +57,9 @@
                 d="M15.434 1.235A2 2 0 0 0 13.586 0H2.414A2 2 0 0 0 1 3.414L6.586 9a2 2 0 0 0 2.828 0L15 3.414a2 2 0 0 0 .434-2.179Z">
               </path>
             </svg>
-            <span>Work Out</span>
+            <span class="sm: text-xs">Work Out</span>
           </button>
-          <ul class="dropdown-options bg-lime-100 w-[10rem] border-2 border-black" id="workout-options">
+          <ul class="dropdown-options bg-lime-100 w-[10rem] border-2 border-black sm: text-xs sm: w-[6rem]" id="workout-options">
             <li><a href="#" value="strength">Strength</a></li>
             <li><a href="#" value="cardio">Cardio</a></li>
             <li><a href="#" value="powerlifting">Powerlifting</a></li>
